feat(dragons): add dragon endpoints and db migrations
  * Add POST and GET /dragon endpoints with tests and swagger docs
  * Implement `golang-migrate` for SQLite schema management
  * Update user models and DB queries to include associated dragon data
